--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <title>Travel Site</title>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="logo">Travel Site</div>
+        <ul class="nav-links">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Hawaii</a></li>
+          <li><a href="#">Iceland</a></li>
+          <li><a href="#">Greece</a></li>
+        </ul>
+      </nav>
     
 </body>
 </html>
