--- a/index.html
+++ b/index.html
@@ -1,22 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/global.css">
-    <link rel="stylesheet" href="./css/index.css">
-    <title>Travel Site</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Home</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <nav class="navbar">
-        <div class="logo">Travel Site</div>
-        <ul class="nav-links">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Hawaii</a></li>
-          <li><a href="#">Iceland</a></li>
-          <li><a href="#">Greece</a></li>
-        </ul>
-      </nav>
-    
+
+  <div id="navbar">
+    <h1>Travel Site</h1>
+    <ul>
+      <li class="active"><a href="index.html">Home</a></li>
+      <li><a href="Hawaii.html">Hawaii</a></li>
+      <li><a href="Iceland.html">Iceland</a></li>
+      <li><a href="Greece.html">Greece</a></li>
+    </ul>
+  </div>
+
+  <div class="banner">
+    <div class="banner-text">
+      <h2>Travelling Comes With Endless Discoveries</h2>
+      <p>Don’t let your dreams be just dreams. Experience the world by booking a vacation with us now.</p>
+      <button class="banner-button">Get started</button>
+    </div>
+    <div class="banner-image">
+      <img src="images/hero.png" alt="banner image">
+    </div>
+  </div>
+
+
+  <div class="recommendations">
+    <h2 class="recommendations-title">Recommendations</h2>
+    <div class="recommendations-images">
+      <div class="recommendations-image">
+        <a href="Hawaii.html">
+          <img src="images/hawaii.jpg" alt="Hawaii">
+          <div class="recommendations-image-title">Hawaii</div>
+        </a>
+      </div>
+      <div class="recommendations-image">
+        <a href="Iceland.html">
+          <img src="images/iceland.jpg" alt="Iceland">
+          <div class="recommendations-image-title">Iceland</div>
+        </a>
+      </div>
+      <div class="recommendations-image">
+        <a href="Greece.html">
+          <img src="images/greece.jpg" alt="Greece">
+          <div class="recommendations-image-title">Greece</div>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="footer-left">
+      <div class="footer-title">Contact</div>
+      <div id="font1">Email</div>
+      <div>info@travelsite.com</div>
+    </div>
+    <div class="footer-center">
+      <div class="footer-title">Hours</div>
+      <div class="footer-left">
+        <div id="font1">MONDAY - FRIDAY</div>
+        <div id="font2">9:00 AM - 5:00 PM</div>
+      </div>
+      <div class="footer-center">
+        <div id="font1">SATURDAY</div>
+        <div id="font2">10:00 AM - 4:00 PM</div>
+      </div>
+      <div class="footer-right">
+        <div id="font1">SUNDAY</div>
+        <div id="font2">Closed</div>
+      </div>
+    </div>
+
+    <div class="footer-right">
+      <div class="footer-title" style="padding-left: 25px;">Social</div>
+      <div class="social-icons">
+        <a href="https://www.instagram.com"><img src="images/icon-instagram.png" alt="Instagram"></a>
+        <a href="https://www.facebook.com"><img src="images/icon-facebook.png" alt="Facebook"></a>
+        <a href="https://www.twitter.com"><img src="images/icon-twitter.png" alt="Twitter"></a>
+      </div>
+    </div>
+
+
+
+
 </body>
+
 </html>
